# rag_tutorial_lc

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml  DockerHub.yml  acr.yml
notebook/: 4.0_Langchain_kiso.ipynb  4.5_LCEL.ipynb  4.6_vec_store.ipynb
src/: app.py  chat_qa_chain.py  count_tokens.py  create_embeddings.py  debug.py  extract_text.py  qa_chain.py  rag_qa_chain.py  split_text.py
