[project]
name = "rag-tutorial-lc"
version = "0.1.0"
description = "This is rag tutorial"
authors = [
    {name = "gon9a",email = "atsushi.tmail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.6.0"
openai = "^1.55.0"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
tiktoken = "^0.8.0"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.9.0.post1"
langchain-openai = "^0.2.9"
pypdf = "^5.1.0"
pdfplumber = "^0.11.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
