[project]
name = "rag-tutorial-lc"
version = "0.1.0"
description = "This is rag tutorial"
authors = [
    {name = "gon9a",email = "atsushi.tmail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "langchain-core (>=0.3.35,<0.4.0)",
    "langchain-openai (>=0.3.5,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "websockets (==14.1)",
    "gradio (>=5.16.0,<6.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.55.0"
langchain = "^0.3.7"
tiktoken = "^0.8.0"
langchain-openai = "^0.3.5"
pypdf = "^5.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
